# Design-Pattern

./: CMakeLists.txt  README.md  main.cpp
Adapter/: ClassAdapter.cpp  ObjectAdapter.cpp
ChainOfResponsibility/: ChainOfResponsibility.cpp
Decorator/: Decorator.cpp
Factory/: Factory.md  FactoryMethod.cpp  SingleFactor.cpp
Observer/: Observer.cpp
Proxy/: Proxy.md  ProxyByInherit.cpp  ProxyByInterface.cpp
Singleton/: README.md  Singleton.cpp  Singleton.h  singleton.cpp  singleton_once_api.cpp
Vistor/: Visitor.cpp  Visitor.md
